src/objects/DTC_Deployment_Parameters__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Values used in the DTC deployment services</description>
    <fields>
        <fullName>GitHub_Access_Token__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GitHub Access Token</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GitHub_Repository_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GitHub Repository Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jenkins_Access_Token__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Jenkins Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jenkins_Build_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Jenkins Build URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jenkins_Extract_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Jenkins Extract URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jenkins_Merge_URL__c</fullName>
        <description>URL that is called to initiate a Jenkins merge</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Jenkins Merge URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jenkins_Password__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Jenkins Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jenkins_User__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Jenkins User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DTC Deployment Parameters</label>
</CustomObject>